--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,9 @@ set -g status-bg black
 set -g status-left ''
 set -g status-right ''
 
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
 set-window-option -g window-status-current-bg colour237
 
 # history
@@ -27,9 +30,8 @@ set -g set-titles-string "#T"
 bind-key -n F1 previous-window
 bind-key -n F2 next-window
 
-bind-key -n M-F1 previous-window
-bind-key -n M-F2 next-window
-
+bind -n S-Right next-window
+bind -n S-Left previous-window
 
 # rename window
 bind-key , command-prompt -I "#W" "rename-window '%%'"
