Next and previous windows tmux keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,10 +3,6 @@ set-option -g default-shell /usr/bin/zsh
 set -g status-fg colour208
 set -g status-bg black
 
-# no titles
-set -g status-left ''
-set -g status-right ''
-
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
@@ -19,9 +15,6 @@ set -g history-limit 10000
 bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
-# reload config
-bind r source-file ~/.tmux.conf
-
 # window titles
 set -g set-titles on
 set -g set-titles-string "#T"
@@ -30,8 +23,8 @@ set -g set-titles-string "#T"
 bind-key -n F1 previous-window
 bind-key -n F2 next-window
 
-bind -n S-Right next-window
-bind -n S-Left previous-window
+bind-key -n M-Right next-window
+bind-key -n M-Left previous-window
 
 # rename window
 bind-key , command-prompt -I "#W" "rename-window '%%'"
