tmux unification attempt

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,34 +1,62 @@
 set -g default-terminal "screen-256color"
-set-option -g default-shell /usr/bin/zsh
-set -g status-fg colour208
-set -g status-bg black
 
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
-set-window-option -g window-status-current-bg colour237
+# display pane numbers for little longer
+set -g display-panes-time 3000
 
 # history
 set -g history-limit 10000
 
-# X-clipboad integration Emacs style
-bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# window titles
-set -g set-titles on
-set -g set-titles-string "#T"
+# TODO: this is Mac and FreeBSD location, write some conditional for linux
+set-option -g default-shell /usr/local/bin/zsh
 
-# -n means no prefix
+# automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
+# panes
+set -g pane-border-bg colour0
+set -g pane-border-fg colour19
+set -g pane-active-border-bg colour0
+set -g pane-active-border-fg colour9
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-bg colour18
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour1
+setw -g window-status-current-bg colour19
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+
+setw -g window-status-fg colour9
+setw -g window-status-bg colour18
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# messages
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour16
+
+# Switch windows
+# usage: "SHIFT+arrow" (without prefix key)
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 bind-key -n F1 previous-window
 bind-key -n F2 next-window
-
 bind-key -n M-Right next-window
 bind-key -n M-Left previous-window
-
-# rename window
-bind-key , command-prompt -I "#W" "rename-window '%%'"
-
-# session rename
-bind-key '$' command-prompt -I "#S" "rename-session '%%'"
-
