tmux: handle paths differences for mac and linux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,9 +9,6 @@ set -g history-limit 10000
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# TODO: this is Mac and FreeBSD location, write some conditional for linux
-set-option -g default-shell /usr/local/bin/zsh
-
 # automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
@@ -60,3 +57,6 @@ bind-key -n F1 previous-window
 bind-key -n F2 next-window
 bind-key -n M-Right next-window
 bind-key -n M-Left previous-window
+
+
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-macos.conf' 'source ~/.tmux-linux.conf'
