tmux status line colour tweaks

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,10 +30,10 @@ set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=co
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour1
-setw -g window-status-current-bg colour19
+setw -g window-status-current-fg white
+setw -g window-status-current-bg colour92
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-format ' #I#[fg=colour226]:#[fg=colour226]#W#[fg=colour226]#F '
 
 setw -g window-status-fg colour9
 setw -g window-status-bg colour18
