Fix config for 2.9 version

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,40 +14,40 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 # panes
-set -g pane-border-bg colour0
-set -g pane-border-fg colour19
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour9
+set -g pane-border-style bg=colour0
+set -g pane-border-style fg=colour19
+set -g pane-active-border-style bg=colour0
+set -g pane-active-border-style fg=colour9
 
 # statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-bg colour18
 set -g status-fg colour137
-set -g status-attr dim
+# set -g status-attr dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour92
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=white
+setw -g window-status-current-style bg=colour92
+setw -g window-status-current-style bold
 setw -g window-status-current-format ' #I#[fg=colour226]:#[fg=colour226]#W#[fg=colour226]#F '
 
-setw -g window-status-fg colour9
-setw -g window-status-bg colour18
-setw -g window-status-attr none
+setw -g window-status-style fg=colour9
+setw -g window-status-style bg=colour18
+setw -g window-status-style "none"
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bold
+setw -g window-status-bell-style fg=colour255
+setw -g window-status-bell-style bg=colour1
  
 # messages
-set -g message-attr bold
-set -g message-fg colour45
-set -g message-bg colour16
+set -g message-style bold
+set -g message-style fg=colour45
+set -g message-style bg=colour16
  
 # Switch windows
 # usage: "SHIFT+arrow" (without prefix key)
@@ -58,4 +58,4 @@ bind-key -n F2 next-window
 bind-key -n M-Right next-window
 bind-key -n M-Left previous-window
 
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-macos.conf' 'source ~/.tmux-linux.conf'
+# if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-macos.conf' 'source ~/.tmux-linux.conf'
