psqlrc custom queries examples

--- a/psqlrc/.psqlrc
+++ b/psqlrc/.psqlrc
@@ -18,4 +18,32 @@
 
 \set ECHO queries
 
-\unset QUIET
+--------------------------------------------------------------------------------
+-- Custom queries examples
+
+-- number of connected backends
+\set backends 'SELECT datname, numbackends FROM pg_catalog.pg_stat_database;'
+
+-- buffer cache hit ratio
+\set buffer_cache_hit_ratio 'select datname, blks_hit::float/(blks_hit+blks_read) as hit_ratio from pg_stat_database where blks_read+blks_hit <> 0;'
+
+-- kill transactions that have been "idle in transaction" for more than 10 minutes
+\set kill_old_transactions 'select count(pg_terminate_backend(pid)) as nb_killed_proc from pg_stat_activity where query = \'<IDLE> in transaction\' and current_timestamp - query_start > \'10 min\';'
+
+-- running queries
+\set queries  'select current_timestamp - query_start as runtime,pid,datname,usename,query from pg_stat_activity where query != \'<IDLE>\' order by 1 desc; '
+
+-- server uptime
+\set uptime   'select date_trunc(\'second\',current_timestamp - pg_postmaster_start_time()) as uptime;'
+
+--------------------------------------------------------------------------------
+\set QUIET 0
+
+\echo '--------------------------------------'
+\echo 'Custom queries:'
+\echo '\t' ':backends'
+\echo '\t' ':buffer_cache_hit_ratio'
+\echo '\t' ':kill_old_transactions'
+\echo '\t' ':queries'
+\echo '\t' ':uptime'
+\echo '--------------------------------------\n'
